c4prj2_input/grade.txt
Grading at Tue Oct  2 18:32:21 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:56:10: error: ‘c’ undeclared (first use in this function)
     free(c);
          ^
future.c:56:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation of future.c failed

Overall Grade: F
